# bitsplit

./: .gitignore  README.md  pyproject.toml  test_bitsplit.py
bitsplit/: __init__.py  cli.py  core.py
docs/: conf.py  how-it-works.md  index.md  requirements.txt  security.md
